<resources>

    <string name="app_name">UniversalYogaAppAdmin</string>
    <string name="dayOfTheWeek">Day of the week *</string>
    <string name="timeOfCourse">Time of course *</string>
    <string name="capacity">Class Capacity *</string>
    <string name="duration">Duration *</string>
    <string name="price">Class Price *</string>
    <string name="typeOfClass">Type of class *</string>
    <string name="description">Class description</string>
    <string name="exercise1">Flow Yoga</string>
    <string name="exercise2">Areal Yoga</string>
    <string name="exercise3">Family Yoga</string>
    <string name="exercise4">Meditation</string>
    <string name="hint_capacity">ex. 20</string>
    <string name="hint_price">ex. £10</string>
    <string name="hint_descriotion">Description</string>
    <string name="confirm_checkBox">Confirm</string>
    <string name="createBooking_btn">Create Session</string>
    <string name="exit_command_label">EXIT</string>

    <string-array name="daysOfTheWeek">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="timeOfTheCourse">
        <item>09:00 – 10:00</item>
        <item>10:00 – 11:00</item>
        <item>11:00 – 12:00</item>
        <item>12:00 – 13:00</item>
        <item>13:00 – 14:00</item>
        <item>14:00 – 15:00</item>
        <item>15:00 – 16:00</item>
        <item>16:00 – 17:00</item>
        <item>17:00 – 18:00</item>
    </string-array>

    <string name="url">https://stuiis.cms.gre.ac.uk/COMP1424CoreWS/comp1424cw/SubmitClasses</string>

    <string name="json">
        {\"userId\":\"wm123\",
        \"detailList\":[
        {\"dayOfWeek\":\"Tuesday\", \"timeOfDay\":\"18:00\", \"classList\":[
        {\"date\":\"24/10/2023\", \"teacher\":\"Russell\"},
        {\"date\":\"31/10/2023\", \"teacher\":\"Joe\"}]},
        {\"dayOfWeek\":\"Thursday\", \"timeOfDay\":\"07:00\", \"classList\":[
        {\"date\":\"26/10/2023\", \"teacher\":\"Elena\"},
        {\"date\":\"02/11/2023\", \"teacher\":\"Katya\"}]}
        ]}
    </string>


</resources>