<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="center"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="114dp"
            android:layout_height="25dp"
            android:text="@string/dayOfTheWeek"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="80dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeofCourse"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="116dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capacity"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="149dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            tools:layout_editor_absoluteX="19dp"
            tools:layout_editor_absoluteY="191dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="235dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typeOfClass"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="288dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripton"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="341dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#00BCD4"
            app:title="Universal Yoga Admin App"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:titleTextColor="#FFFFFF"></androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>